[package]
name = "dahlia"
version = "1.1.0"
edition = "2021"
license = "MIT"
description = "A library allowing you to use Minecraft format codes in strings."
repository = "https://github.com/dahlia-lib/dahlia-rs"
authors = ["trag1c <trag1cdev@yahoo.com>"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.11", features = ["macros"] }
regex = "1.6.0"
lazy_static = "1.4.0"
